<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.lenovo.projek_akhir_fakulfix.DetailFakultas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_detail_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ekonomi"
            android:scaleType="fitXY"/>
        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/Lokasi"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/tv_detail_lokasi"
            style="@style/TextContent.Black"
            android:textSize="12sp"
            android:text="@string/content_lokasi_ekonomi"
            android:layout_marginBottom="8dp"/>
        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/fasilitas"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/tv_detail_fasilitas"
            style="@style/TextContent"
            android:text="@string/fasilitas_ekonomi"
            android:textSize="12sp"
            android:layout_marginBottom="8dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"/>
        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/akses_kendaraan"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/tv_detail_akseskendaraan"
            style="@style/TextContent"
            android:text="@string/content_akseskendaraan_ekonomi"
            android:textSize="12sp"
            android:layout_marginBottom="8dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"/>

        </TableLayout>

    </LinearLayout>
</ScrollView>
